k8s/auth.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-service # Le nom utilisé par les autres services pour lui parler
spec:
  type: ClusterIP # Pas besoin de NodePort car on utilisera Ingress 
  selector:
    app: auth
  ports:
    - port: 4000
      targetPort: 4000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: marinecdt/filrouge-auth:latest 
        imagePullPolicy: Always
        ports:
        - containerPort: 4000
